0x02-functions_nested_loops/2-print_alphabet_x10.c:
lphabet_xilphabet_x10.c:20:2: error: expected declaration or statement at end of input
   20 |  }
      |  ^0.c:20:2: error: expected declaration or statement at end of input
   20 |  }
      |  ^
